增加安全限制,回车提交表单小优化

--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/index.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/index.html
@@ -71,7 +71,7 @@ $(function(){
 		</li>
 	</@_sysAuthorized>
 		<li>
-			<i class="icon-signout icon-large"></i> <a href="logout">退出</a>
+			<i class="icon-signout icon-large"></i> <a href="logout.do?userId=${admin.id}">退出</a>
 		</li>
 	</ul>
 	<ul id="navMenu">
