内容添加页面系统字段是否必填无效bug修复

--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsContent/add.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsContent/add.html
@@ -43,7 +43,7 @@ function clickAddTag(){
 			<div class="pageFormContent" layoutH="96">
 		<#if model?has_content>
 			<#assign fieldList=model.fieldList![]/>
-			<#assign requiredFieldList=model.requiredFfieldList![]/>
+			<#assign requiredFieldList=model.requiredFieldList![]/>
 			<@_content id=parentId>
 				<dl class="nowrap">
 				    <dt>父内容:</dt>
