文件锁逻辑调整，文件路径转url编码处理

--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsTemplate/help.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsTemplate/help.html
@@ -229,7 +229,7 @@
 				</li>
 			<#elseif metaDataMap[a.fileName]?has_content&&metaDataMap[a.fileName].allowContribute>
 				<li>
-					<a href="placeTemplate/form.html?path=${path!}" target="dialog" mask="true">
+					<a href="placeTemplate/form.html?path=${(path?url)!}" target="dialog" mask="true">
 						${(metaDataMap[a.fileName].alias)!a.fileName}
 					</a>
 				</li>
