--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsWebFile/list.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsWebFile/list.html
@@ -13,9 +13,10 @@
 <div class="pageContent">
 	<div class="panelBar">
 		<ul class="toolBar">
-			<li><a href="cmsWebFile/content.html?path=${(path)!}" target="navTab" rel="cmsWebFile/content"><i class="icon-plus-sign-alt icon-large"></i> 创建文件</a></li>
-			<li><a href="cmsWebFile/directory.html?path=${(path)!}" target="dialog" mask="true" width="500" height="200"><i class="icon-folder-close-alt icon-large"></i> 创建目录</a></li>
-			<li><a href="cmsWebFile/upload.html?path=${(path)!}" target="dialog" mask="true" width="500" height="200"><i class="icon-upload icon-large"></i> 上传文件</a></li>
+			<li><a href="cmsWebFile/content.html?path=${(path?url)!}" target="navTab" rel="cmsWebFile/content"><i class="icon-plus-sign-alt icon-large"></i> 创建文件</a></li>
+			<li><a href="cmsWebFile/directory.html?path=${(path?url)!}" target="dialog" mask="true" width="500" height="200"><i class="icon-folder-close-alt icon-large"></i> 创建目录</a></li>
+			<li><a href="cmsWebFile/upload.html?path=${(path?url)!}" target="dialog" mask="true" width="500" height="200"><i class="icon-upload icon-large"></i> 上传文件</a></li>
+			<li><a href="cmsWebFile/zip.do?path=${(path?url)!'/'}" title="确定要压缩这个目录吗?" target="ajaxTodo"><i class="icon-upload icon-large"></i> 压缩当前目录</a></li>
 			<li><a href="cmsWebFile/delete.do" title="确定要删除这些文件吗?" target="selectedTodo" rel="paths"><i class="icon-trash icon-large"></i> 批量删除</a></li>
 		</ul>
 	</div>
