--- a/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsWebFile/lookup.html
+++ b/publiccms-parent/publiccms/src/main/resources/templates/admin/cmsWebFile/lookup.html
@@ -63,7 +63,7 @@
 				<td></td>
 				<td class="tree"><div class="folder_expandable"></div></td>
 				<td>
-					<a href="cmsWebFile/lookup.html?path=${path?keep_before_last('/')}&editor=${editor!'cmsTemplateEditor'}&fullPath=${fullPath!}" target="dialog" mask="true" title="${path?keep_before_last('/')}">
+					<a href="cmsWebFile/lookup.html?path=${path?keep_before_last('/')?url}&editor=${editor!'cmsTemplateEditor'}&fullPath=${(fullPath?url)!}" target="dialog" mask="true" title="${path?keep_before_last('/')}">
 						返回上级..
 					</a>
 				</td>
@@ -84,7 +84,7 @@
 				<td class="tree"><div class="${a.directory?then('folder_expandable','file')}" style="width:30px;"></div></td>
 				<td>
 					<#if a.directory>
-						<a href="cmsWebFile/lookup.html?path=${filePath?url}&fullPath=${fullPath!}" target="dialog" mask="true" title="${filePath}">
+						<a href="cmsWebFile/lookup.html?path=${filePath?url}&fullPath=${fullPath?url!}" target="dialog" mask="true" title="${filePath}">
 							${a.fileName}
 						</a>
 					<#else>
