--- a/publiccms-parent/publiccms/src/main/webapp/resource/themes/default/style.css
+++ b/publiccms-parent/publiccms/src/main/webapp/resource/themes/default/style.css
@@ -100,7 +100,8 @@ input.disabled, textarea.disabled{ border-color:#9eabb3 #d5dbdf #d5dbdf #9eabb3;
 /* CSS Table */
 table.list .trbg { background-color:#f8f8f8;}
 table.list .hover { background-color:#fff5c0;}
-table.list .selected { background-color:#5A6D95;}
+table.list .selected { background-color:#5A6D95;color:#cdcdcd;}
+table.list .selected a{ color:#ffffff;}
 
 /* Pages */
 .pageForm .inputInfo{ color:#999;}
